# automoderation

./: CONTRIBUTING.md  Dockerfile  README.md  makefile  pyproject.toml  pytest.ini
automoderation/: __init__.py  main.py
automoderation/ai_models/: __init__.py  abstract_model.py  abstract_thresholds.py
automoderation/ai_models/detoxify/: __init__.py  model.py  threshold.py
automoderation/models/: constants.py  interfaces.py
automoderation/modules/: moderation_module.py  text_toxicity.py  url_validation.py
automoderation/utils/: status_utils.py  text_utils.py
